--- a/scrapers/requirements.txt
+++ b/scrapers/requirements.txt
@@ -68,6 +68,8 @@ parsel==1.8.1
     # via
     #   itemloaders
     #   scrapy
+pillow==9.5.0
+    # via -r requirements.in
 protego==0.2.1
     # via scrapy
 pyasn1==0.5.0
