--- a/scrapers/Dockerfile
+++ b/scrapers/Dockerfile
@@ -3,4 +3,4 @@ WORKDIR /app
 COPY . .
 RUN pip install --upgrade pip
 RUN pip install -r requirements.txt
-ENTRYPOINT [ "scrapy", "crawl", "gallito" ]
+ENTRYPOINT [ "scrapy", "crawl", "tienda_inglesa" ]
