--- a/serving/Dockerfile
+++ b/serving/Dockerfile
@@ -1,5 +1,8 @@
 FROM python:3-slim-buster
 WORKDIR /app
 COPY ./app .
-COPY models/model_1.h5 model_1.h5
+COPY models/model_1.h5 models/model_1.h5
 COPY requirements.txt requirements.txt
+RUN pip install -r requirements.txt
+EXPOSE 80
+ENTRYPOINT ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "80"]
