--- a/serving/Dockerfile
+++ b/serving/Dockerfile
@@ -1,7 +1,7 @@
 FROM python:3-slim-buster
 WORKDIR /app
 COPY ./app .
-COPY models/model_1.h5 models/model_1.h5
+COPY models/model1.h5 models/model1.h5
 COPY requirements.txt requirements.txt
 RUN pip install -r requirements.txt
 EXPOSE 80
